--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
   "angularCompilerOptions": {
     "enableIvy": true,
     "fullTemplateTypeCheck": true,
-    "strictInjectionParameters": true
+    "strictInjectionParameters": true,
+    // "resolveJsonModule": true
   }
 }
