--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build-prod": "ng build --configuration production",
+    "build-prod": "npm run clean-dist && ng build --configuration production",
     "deploy": "git subtree push --prefix dist origin gh-pages",
+    "clean-dist" : "rm dist/main.* dist/polyfills.* dist/runtime.* dist/styles.*",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
