handle deleting && recreating ./dist by ng build

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "dist": "ng build --configuration production",
+    "dist": "ng build --configuration production && echo 'gitdir: /home/inna/code/riivanov.github.io/.git/worktrees/dist' > ./dist/.git",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
