add favicon; prettier; strictTemplates for angular langauge service

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
   "angularCompilerOptions": {
     "enableIvy": true,
     "fullTemplateTypeCheck": true,
-    "strictInjectionParameters": true
+    "strictInjectionParameters": true,
+    "strictTemplates": true
   },
   "files": ["src/main.ts", "src/polyfills.ts"]
 }
