--- a/angular.json
+++ b/angular.json
@@ -1,71 +1,49 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1,
+  "cli": {
+    "analytics": false
+  },
   "newProjectRoot": "projects",
   "projects": {
     "site": {
-      "root": "",
-      "sourceRoot": "src",
-      "projectType": "application",
-      "prefix": "",
-      "schematics": {
-        "@schematics/angular:component": {
-          "style": "scss"
-        }
-      },
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
-          "options": {
-            "outputPath": "dist",
-            "index": "src/index.html",
-            "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "tsconfig.json",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.scss"
-            ]
-          },
           "configurations": {
+            "dev": {
+              "optimization": false,
+              "sourceMap": true
+            },
             "production": {
+              "aot": true,
+              "buildOptimizer": true,
+              "extractLicenses": true,
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
+              "namedChunks": false,
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
-              "namedChunks": false,
-              "aot": true,
-              "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true
-            },
-            "dev" : {
-              "sourceMap": true,
-              "optimization": false
+              "vendorChunk": false
             }
-          }
-        },
-        "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
-          "options": {
-            "browserTarget": "site:build",
-            "watch": true
           },
-          "configurations": {
-            "production": {
-              "browserTarget": "site:build:production"
-            },
-            "dev" : {
-              "browserTarget": "site:build:dev"
-            }
+          "options": {
+            "assets": [
+              "src/favicon.ico",
+              "src/assets"
+            ],
+            "index": "src/index.html",
+            "main": "src/main.ts",
+            "outputPath": "dist",
+            "polyfills": "src/polyfills.ts",
+            "styles": [
+              "src/styles.scss"
+            ],
+            "tsConfig": "tsconfig.json"
           }
         },
         "extract-i18n": {
@@ -77,19 +55,41 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
+            "exclude": [
+              "**/node_modules/**"
+            ],
             "tsConfig": [
               "src/tsconfig.app.json",
               "src/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
             ]
           }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "configurations": {
+            "dev": {
+              "browserTarget": "site:build:dev"
+            },
+            "production": {
+              "browserTarget": "site:build:production"
+            }
+          },
+          "options": {
+            "browserTarget": "site:build",
+            "watch": true
+          }
         }
-      }
+      },
+      "prefix": "",
+      "projectType": "application",
+      "root": "",
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
+      "sourceRoot": "src"
     }
   },
-  "cli": {
-    "analytics": false
-  }
+  "version": 1
 }
