--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,13 +12,9 @@
     "target": "ESNext",
     "resolveJsonModule": true,
     "skipLibCheck": true,
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2018",
-      "dom"
-    ]
+    "strict": true,
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2018", "dom"]
   },
   "angularCompilerOptions": {
     "enableIvy": true,
