--- a/angular.json
+++ b/angular.json
@@ -68,7 +68,8 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "dev": {
-              "browserTarget": "site:build:dev"
+              "browserTarget": "site:build:dev",
+              "hmr": true
             },
             "production": {
               "browserTarget": "site:build:production"
